project/static/style/main.css
:root {
    --primary-color: #1a1a1a;
    --secondary-color: rgb(157, 0, 255);
    --secondary-color-hovered: rgb(138, 0, 224);
    --tertiary-color: #222;
    --quaternary-color: #444;
    --text-color: #FFFFFF;
    --invert: 0;
}

@media (prefers-color-scheme: light){
    :root{
        --primary-color: #ffffff;
        --tertiary-color: #d7d7d7;
        --quaternary-color: #aaaaaa;
        --text-color: #000000;
        --invert: 1;
    }
}

* {
    font-family: "JetBrains Mono", Arial, Helvetica, sans-serif;
}

body, html{
  padding: 0;
  margin: 0;
}

body { 
  font-family: sans-serif; 
  text-align: center; 
  background: var(--primary-color);
  color: var(--text-color); 
}

.content {
  padding: 0px 20px;
}

.viewer-box { 
  position: relative;
  margin: 20px auto; 
  width: 400px;
  aspect-ratio: 4 / 5;
  background: var(--tertiary-color); 
  border-radius: 20px;
  max-width: 100%;
}

.gallery-tile .viewer-box { 
  position: relative;
  margin: 0px auto; 
  width: 400px;
  aspect-ratio: 4 / 5;
  background-color: transparent;
  border-radius: 20px;
  max-width: 100%;
}

.skin-container {
  position: absolute;
  top: 50%; 
  left: 50%;
  transform: translate(-50%, -50%);
  height: fit-content !important;
  width: auto !important;
  max-width: 100%;
  max-height: 100%;
  aspect-ratio: 4/5 !important;
}

.skin-loading{
  position: absolute;
  display: grid;
}

.dark-overlay{
  width: 100%;
  height: 100%;
  background-color: #00000055;
  border-radius: 20px;
}

.loader {
  width: 50px;
  aspect-ratio: 1;
  top: 50%;
  left: 50%;
  transform:translate(-50%, -50%);
}

.loader::before,
.loader::after {    
  content:"";
  grid-area: 1/1;
  --c:no-repeat radial-gradient(farthest-side,#25b09b 92%,#0000);
  background: 
    var(--c) 50%  0, 
    var(--c) 50%  100%, 
    var(--c) 100% 50%, 
    var(--c) 0    50%;
  background-size: 12px 12px;
  animation: l12 1s infinite;
}

.loader::before {
  margin: 4px;
  filter: hue-rotate(45deg);
  background-size: 8px 8px;
  animation-timing-function: linear
}

#loading-text{
  top: 80%;
  left: 50%;
  transform:translate(-50%, -50%);
  z-index: 9;
}

.loading-queued{
  color: orange;
}

.loading-failed{
  color: red;
}

.loading-processing{
  color: orange;
}

@keyframes l12 { 
  100%{transform: rotate(.5turn)}
}

.gen-button-loading{
  background-color: red;
}

.profile-info{
  display: flex;
  background-color: var(--tertiary-color);
  margin: 20px auto;
  padding: 30px;
  border-radius: 20px;
  text-align: left;
  align-items: center;
  flex-wrap:wrap;
  justify-content: center;
}

.profile-info p{
  display: inline-block;
  flex-grow: 1;
}

.small-button{
  display: inline-block;
  background-color: transparent;
  border: 0;
  color: var(--text-color);
  padding: 10px;
  border-radius: 15px;
  text-decoration: none;
}

#gallery{
  display: flex;
  gap: 20px;
  flex-wrap: nowrap;
  justify-content: left;
  overflow-x:auto;
}

.gallery-tile{
  width: 200px;
  background-color: var(--quaternary-color);
  border-radius: 15px;
  text-align: center;
}

.gallery-tile .button-container{
  display: flex;
  justify-content: space-evenly;
  padding-bottom: 10px;
}

.gallery-tile .round-button{
  border: 0;
  color: var(--text-color);
  border-radius: 50%;
  padding: 8px;
  width: 40px;
  cursor: pointer;
}

.gallery-tile .round-button img{
  aspect-ratio: 1;
  width: 100%;
  filter: invert(var(--invert));
}

.icon{
  margin: auto auto;
  height: 75%;
  aspect-ratio: 1;
  filter: invert(var(--invert));
}

.header a{
    padding: 0 10px;
    text-decoration: none;
    color: var(--text-color);
}

.header .header-logo{
    height: 70%;
    width: auto;
    filter: invert(var(--invert));
}

.header .full-button{
    display: flex;
    overflow:hidden;
    color: var(--text-color);
    background-color: transparent;
    border: 0;
    height: 100%;
    align-items: center;
    justify-content: center;
    border-radius: 20px;
}

.header .right{
    margin-left: auto;
}


.header .full-button:hover{
    box-shadow: inset 0 0 16px rgba(0, 0, 0, 0.3);
}

.header{
    z-index: 10;
    display:flex;
    align-items: center;
    text-align: center;
    position: sticky;
    top: 0;
    padding: 0;
    margin: 0;
    height: 50px;
    background: var(--tertiary-color);
    color: var(--text-color);
}

.modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.7);
    backdrop-filter: blur(5px);
    display: none;
    z-index: 1000;
    justify-content: center;
    align-items: center;
}

.modal-content {
    background: var(--primary-color);
    padding: 30px;
    border-radius: 12px;
    width: 400px;
    max-width: 90%;
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
    border: 1px solid #333;
    position: relative;
    color: var(--text-color);
}

.close-btn {
    position: absolute;
    top: 15px;
    right: 15px;
    background: none;
    border: none;
    color: #888;
    font-size: 20px;
    cursor: pointer;
}

.close-btn:hover { 
    color: var(--text-color); 
}

.modal-content h2 { 
  margin-top: 0; 
  margin-bottom: 20px; 
}

.modal-content input {
    width: 100%;
    padding: 12px;
    margin-bottom: 15px;
    background: #2b2b2b;
    border: 1px solid #444;
    border-radius: 6px;
    color: var(--text-color);
    box-sizing: border-box;
}

.modal-content input[type="checkbox"] {
    width: auto;
    margin-bottom: 0;
    cursor: pointer;
    margin-bottom: 15px;
}

.modal-content button[type="submit"], .modal-content button.submit{
    width: 100%;
    padding: 12px;
    border: none;
    border-radius: 6px;
    color: var(--text-color);
    background-color: var(--secondary-color);
    font-weight: bold;
    cursor: pointer;
    transition: background 0.3s;
}

.modal-content .error-message{
    color: orangered;
    display: none;
}

.modal-content .feedback-message{
    color: #ffffff;
    display: none;
}

.red{
  background-color: red;
}

.red:hover{
  background-color: rgb(204, 0, 0)
}

.blue{
  background-color: #007bff;
}

.blue:hover{
  background-color: #005cbe;
}

.primary-color{
  background-color: var(--primary-color);
}

.secondary-color{
  background-color: var(--secondary-color);
}

button.secondary-color:hover, a.secondary-color:hover{
  background-color: var(--secondary-color-hovered);
}

.secondary-color-text{
  color: var(--secondary-color);
}

.no-l-margin{
  margin-left: 0;
}

.no-r-margin{
  margin-right: 0;
}

.r-margin-10{
  margin-right: 10px;
}


.no-l-padding{
  padding-left: 0;
}

.no-r-padding{
  padding-right: 0;
}

.nearest{
  image-rendering: pixelated;
}

.hidden{
  display: none !important;
}

.editor{
  display: flex;
  width: 100%;
  height: calc(100vh - 50px);
  gap: 20px;
}

.right-panel{
  flex-grow: 1;
  height: 100%;
}

.left-panel{
  height: 100%;
}

.texture-container{
  width:100%;
  height:100%;
  overflow: hidden;
  position: relative;
  justify-content: center;
  align-items: center;
  display: flex;
  user-select: none;
  touch-action: none;
}

.texture-container > img{
  width: 90%;
  aspect-ratio: 1;
  user-select: none;
  touch-action: none;
}

.texture-container > img.background{
  background-image: conic-gradient(#989898 90deg, #ffffff00 90deg 180deg, #989898 180deg 270deg, #ffffff00 270deg);
  background-size: calc(100% / 32) calc(100% / 32);
  border: 0;
}

.panel{
  background-color: var(--tertiary-color);
  margin: 20px auto;
  padding: 30px;
  box-sizing: border-box;
  border-radius: 20px;
  height: calc(100vh - 90px)
}

.stop-scrolling{
  height: 100%;
  overflow: hidden;
}

.editor .viewer-box { 
  position: relative;
  margin: 20px auto;
  height: calc(100vh - 170px);
  width: auto;
  background: var(--tertiary-color); 
  border-radius: 20px;
}

.editor .viewer-box .toggle{
  position: absolute;
  display: flex;
  top: 15px;
  left: 15px;
  z-index: 5;
  width: 80px;
  padding: 0;
  aspect-ratio: 4/2;
  border-radius: 15px;
  background-color: var(--primary-color);
  border: var(--secondary-color) 2px solid;
  overflow: hidden;
  cursor: pointer;
}

.editor .viewer-box .toggle div{
  width:50%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media (max-width: 1200px){
  .editor{
    display: block;
  }

  .right-panel{
    width: 100%;
  }

  .left-panel{
    width: 100%;
  }
}

